syntax = "proto3";

package agent_platform;
option go_package = "pkg/pb";
option swift_prefix = "";

import "agent.proto";

service AgentPlatform {
  rpc SignedEndpointHeader(PlatformEndpointRequest) returns (PlatformEndpointResponse);
}

message PlatformEndpointRequest {
  agent.RequestHeader header = 1;
  string challenge = 2;
}

message PlatformEndpointResponse {
  agent.ResponseHeader header = 1;
  string message = 2;
}
